--- a/index.html
+++ b/index.html
@@ -1182,7 +1182,7 @@
         <!-- Footer -->
         <footer class="footer">
             <p>&copy; 2025 Hospital Susana López de Valencia</p>
-            <p>Desarrollado con ❤️ por Ing. Paul Eduardo Muñoz Rodriguez</p>
+            <p>Desarrollado por Ing. Paul Eduardo Muñoz Rodriguez</p>
         </footer>
     </div>
 
