--- a/index.html
+++ b/index.html
@@ -625,6 +625,7 @@
         <header class="header">
             <div class="header-content">
                 <div class="logo-section">
+                    <img src="logo-hospital.png" alt="Logo Hospital" style="height: 75px; width: auto; object-fit: contain; margin-right: 1.5rem;">
                     <div>
                         <h1>🏥 Sistema de Capacitaciones</h1>
                         <p>Hospital Susana López de Valencia</p>
