--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
                 <div class="logo-section">
                     <img src="logo-hospital.png" alt="Logo Hospital" style="height: 75px; width: auto; object-fit: contain; margin-right: 1.5rem;">
                     <div>
-                        <h1>🏥 Sistema de Capacitaciones</h1>
+                        <h1>Sistema de Capacitaciones</h1>
                         <p>Hospital Susana López de Valencia</p>
                         <p style="font-size: 0.8em; font-style: italic;">Desarrollado por Ing. Paul Eduardo Muñoz Rodriguez</p>
                     </div>
