--- a/index.html
+++ b/index.html
@@ -636,8 +636,8 @@
         // ============================================
         // IMPORTANTE: Reemplaza estos valores con tus credenciales reales de Airtable
         const AIRTABLE_CONFIG = {
-            apiKey: 'YOUR_AIRTABLE_API_KEY',  // Reemplaza con tu API Key de Airtable
-            baseId: 'YOUR_BASE_ID',            // Reemplaza con tu Base ID
+            apiKey: 'patlJL75BEpGZnaBz.e76a71ffd6fdd57d02850c0ad7dd9d5bc2e04541db65ce8d314bb3a9d750ccc8',  // Reemplaza con tu API Key de Airtable
+            baseId: 'appcazmz56GPqqqLG',            // Reemplaza con tu Base ID
             tableNames: {
                 trainings: 'Capacitaciones',
                 participants: 'Participantes',
