--- a/index.html
+++ b/index.html
@@ -3524,5 +3524,282 @@ async function saveQuestionsToAirtable(questions, trainingRecordId, type) {
             }
         }
     </script>
+
+<!-- ═════════════════════════════════════════════════════════════════
+     MODAL DE LINK POSTTEST - PRETEST → POSTTEST
+     Modal que muestra QR y link permanente para posttest
+     ═════════════════════════════════════════════════════════════════ -->
+
+<div id="postestLinkModal" class="modal-overlay" style="display: none;">
+  <div class="modal-content posttest-modal" style="max-width: 600px;">
+    <button class="close-btn" onclick="closePostestLinkModal()">✕</button>
+    
+    <div class="posttest-modal-header">
+      <i class="fas fa-check-circle" style="font-size: 3rem; color: #28a745; margin-bottom: 1rem;"></i>
+      <h2>¡Pretest Completado!</h2>
+      <p style="color: #666; margin-top: 0.5rem;">
+        Tu respuesta ha sido guardada correctamente
+      </p>
+    </div>
+
+    <div class="posttest-modal-body">
+      <!-- Sección del QR -->
+      <div class="posttest-qr-section">
+        <h3 style="color: #667eea; margin-bottom: 1rem; text-align: center;">
+          <i class="fas fa-qrcode"></i> Código para Posttest
+        </h3>
+        
+        <div id="postestQrCode" style="
+          display: flex;
+          justify-content: center;
+          padding: 1.5rem;
+          background: #f8f9ff;
+          border-radius: 12px;
+          margin-bottom: 1.5rem;
+        "></div>
+
+        <div style="text-align: center; margin-bottom: 2rem;">
+          <button onclick="downloadPostestQR()" class="btn btn-secondary" style="
+            display: inline-flex;
+            align-items: center;
+            gap: 0.5rem;
+            padding: 0.75rem 1.5rem;
+            border-radius: 8px;
+            background: #f0f0f0;
+            border: 1px solid #ddd;
+            cursor: pointer;
+            font-weight: 500;
+            transition: all 0.3s;
+          " onmouseover="this.style.background='#e8e8e8'" onmouseout="this.style.background='#f0f0f0'">
+            <i class="fas fa-download"></i> Descargar QR
+          </button>
+        </div>
+      </div>
+
+      <!-- Sección del Link -->
+      <div class="posttest-link-section">
+        <h3 style="color: #667eea; margin-bottom: 1rem;">
+          <i class="fas fa-link"></i> Link Permanente
+        </h3>
+
+        <div style="
+          background: #f5f5f5;
+          padding: 1rem;
+          border-radius: 8px;
+          border: 1px solid #e0e0e0;
+          margin-bottom: 1rem;
+        ">
+          <input 
+            type="text" 
+            id="postestUrlInput" 
+            readonly 
+            style="
+              width: 100%;
+              padding: 0.75rem;
+              border: none;
+              background: white;
+              border-radius: 4px;
+              font-family: 'Courier New', monospace;
+              font-size: 12px;
+              word-break: break-all;
+            "
+          >
+        </div>
+
+        <button onclick="copyPostestUrl()" class="btn btn-primary" style="
+          width: 100%;
+          padding: 0.75rem 1.5rem;
+          background: #667eea;
+          color: white;
+          border: none;
+          border-radius: 8px;
+          font-weight: 600;
+          cursor: pointer;
+          transition: all 0.3s;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          gap: 0.5rem;
+          margin-bottom: 1rem;
+        " onmouseover="this.style.background='#5568d3'" onmouseout="this.style.background='#667eea'">
+          <i class="fas fa-copy"></i> Copiar Link
+        </button>
+      </div>
+
+      <!-- Instrucciones -->
+      <div style="
+        background: #e8f5e9;
+        border-left: 4px solid #4caf50;
+        padding: 1rem;
+        border-radius: 4px;
+        margin-top: 1.5rem;
+      ">
+        <p style="color: #2e7d32; margin: 0; font-weight: 500;">
+          <i class="fas fa-info-circle"></i> Información Importante
+        </p>
+        <ul style="color: #558b2f; font-size: 0.9rem; margin: 0.5rem 0 0 1.5rem; padding: 0;">
+          <li>Este link es único para ti y permanecerá válido durante toda la capacitación</li>
+          <li>Guarda el link o escanea el QR para usarlo después de la capacitación</li>
+          <li>Podrás responder el posttest desde cualquier dispositivo usando este código</li>
+          <li>Solo necesitarás este código para acceder al posttest</li>
+        </ul>
+      </div>
+
+      <!-- Código corto -->
+      <div style="
+        background: #fff3e0;
+        border-radius: 8px;
+        padding: 1rem;
+        text-align: center;
+        margin-top: 1.5rem;
+      ">
+        <p style="color: #666; font-size: 0.9rem; margin: 0 0 0.5rem 0;">
+          O usa este código:
+        </p>
+        <div style="
+          font-size: 1.3rem;
+          font-weight: bold;
+          color: #e65100;
+          font-family: 'Courier New', monospace;
+          letter-spacing: 2px;
+        " id="postestCodeDisplay">
+          ---
+        </div>
+      </div>
+    </div>
+
+    <div class="posttest-modal-footer" style="
+      display: flex;
+      gap: 1rem;
+      margin-top: 2rem;
+      padding-top: 1.5rem;
+      border-top: 1px solid #e0e0e0;
+    ">
+      <button onclick="closePostestLinkModal()" class="btn-secondary" style="
+        flex: 1;
+        padding: 0.75rem 1.5rem;
+        background: #f0f0f0;
+        border: 1px solid #ddd;
+        border-radius: 8px;
+        cursor: pointer;
+        font-weight: 500;
+        transition: all 0.3s;
+      " onmouseover="this.style.background='#e8e8e8'" onmouseout="this.style.background='#f0f0f0'">
+        Cerrar
+      </button>
+      <button onclick="copyPostestUrl()" class="btn-primary" style="
+        flex: 1;
+        padding: 0.75rem 1.5rem;
+        background: #667eea;
+        color: white;
+        border: none;
+        border-radius: 8px;
+        cursor: pointer;
+        font-weight: 600;
+        transition: all 0.3s;
+      " onmouseover="this.style.background='#5568d3'" onmouseout="this.style.background='#667eea'">
+        Copiar Link
+      </button>
+    </div>
+  </div>
+</div>
+
+<!-- CSS para el Modal Posttest -->
+<style>
+  .posttest-modal {
+    background: white;
+    border-radius: 16px;
+    box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
+    padding: 2rem;
+    max-height: 90vh;
+    overflow-y: auto;
+    position: relative;
+  }
+
+  .posttest-modal-header {
+    text-align: center;
+    margin-bottom: 2rem;
+  }
+
+  .posttest-modal-header h2 {
+    color: #333;
+    font-size: 1.8rem;
+    margin: 1rem 0 0.5rem 0;
+  }
+
+  .posttest-qr-section {
+    text-align: center;
+    margin-bottom: 2rem;
+  }
+
+  .posttest-link-section {
+    margin: 2rem 0;
+  }
+
+  .posttest-link-section h3 {
+    margin-bottom: 1rem;
+  }
+
+  .modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 2000;
+    padding: 1rem;
+  }
+
+  .modal-overlay.show {
+    display: flex;
+  }
+
+  .close-btn {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    background: none;
+    border: none;
+    font-size: 1.5rem;
+    cursor: pointer;
+    color: #999;
+    transition: color 0.3s;
+  }
+
+  .close-btn:hover {
+    color: #333;
+  }
+
+  /* Responsive */
+  @media (max-width: 600px) {
+    .posttest-modal {
+      padding: 1.5rem;
+      margin: 0 1rem;
+    }
+
+    .posttest-modal-header h2 {
+      font-size: 1.5rem;
+    }
+
+    #postestQrCode {
+      width: 200px !important;
+      height: 200px !important;
+      margin: 0 auto 1rem !important;
+    }
+
+    .posttest-modal-footer {
+      flex-direction: column;
+    }
+
+    .posttest-modal-footer button {
+      width: 100% !important;
+    }
+  }
+</style>
+
 </body>
 </html>
