--- a/index.html
+++ b/index.html
@@ -2212,7 +2212,7 @@
                         console.log(`✅ ACEPTADO COMO POSTEST: "${tipoExamen}"`);
                     }
                     
-                    return esPostest;
+                    return esPosttest;
                 });
                 
                 console.log('🎓 Preguntas de postest encontradas:', allPostestQuestions.length);
