--- a/index.html
+++ b/index.html
@@ -1201,7 +1201,7 @@
 
                 <div class="card">
                     <h3>✅ Post-test (Evaluación Final)</h3>
-                    <div id="PostestQuestions" class="questions-container"></div>
+                    <div id="postestQuestions" class="questions-container"></div>
                     <button class="btn btn-secondary" onclick="addQuestion('postest')">
                         <i class="fas fa-plus"></i> Agregar Pregunta
                     </button>
