--- a/index.html
+++ b/index.html
@@ -2476,7 +2476,7 @@
                         path: `/Participaciones/${currentParticipationId}`,
                         body: {
                             fields: {
-                                'Posttest Score': postestScore,
+                                'Post-test Score': postestScore,
                                 'Fecha Posttest': fechaFormato,
                                 'Hora Posttest': fechaHoraCompleta,
                                 'Completado Posttest': true,
