--- a/index.html
+++ b/index.html
@@ -1993,7 +1993,7 @@
                         'Fecha Registro': fechaFormato,  // Solo fecha: 2025-11-20
                         'Hora Registro': fechaHoraCompleta,  // ✅ CORREGIDO: Fecha y hora completa
                         'Completado Pretest': true,
-                        'Completado Posttest': false
+                        'Completado Postest': false
                     }
                 };
                 
@@ -2477,9 +2477,9 @@
                         body: {
                             fields: {
                                 'Post-test Score': postestScore,
-                                'Fecha Posttest': fechaFormato,
-                                'Hora Posttest': fechaHoraCompleta,
-                                'Completado Posttest': true,
+                                'Fecha Postest': fechaFormato,
+                                'Hora Postest': fechaHoraCompleta,
+                                'Completado Postest': true,
                                 'Estado': 'Completado'
                             }
                         }
