--- a/index.html
+++ b/index.html
@@ -2475,8 +2475,7 @@
                         body: {
                             fields: {
                                 'Post-test Score': postestScore,
-                                'Fecha Fin': fechaFormato,
-                                'Estado': 'Completado'
+                                'Fecha Fin': fechaFormato
                             }
                         }
                     })
