--- a/index.html
+++ b/index.html
@@ -3086,32 +3086,32 @@
         }
 
         function switchTab(tabName, event = null) {
-    // Mostrar/ocultar tabs
-    document.querySelectorAll('.tab-content').forEach(tab => {
-        tab.classList.remove('active');
-    });
+            // Mostrar/ocultar tabs
+            document.querySelectorAll('.tab-content').forEach(tab => tab.classList.remove('active'));
+            document.querySelectorAll('.nav-tab').forEach(btn => btn.classList.remove('active'));
 
-    document.querySelectorAll('.nav-tab').forEach(btn => {
-        btn.classList.remove('active');
-    });
+            const selectedTab = document.getElementById(tabName);
+            if (selectedTab) selectedTab.classList.add('active');
 
-    const selectedTab = document.getElementById(tabName);
-    if (selectedTab) selectedTab.classList.add('active');
+            // Marcar el botón activo (no depende de data-tab ni de que el onclick pase event)
+            const resolvedEvent = event || (typeof window !== 'undefined' ? window.event : null);
 
-    // Resolver evento (en handlers inline, a veces no se pasa como parámetro)
-    const resolvedEvent = event || (typeof window !== 'undefined' ? window.event : null);
+            let navTab = null;
+            if (resolvedEvent && resolvedEvent.target) {
+                navTab = resolvedEvent.target.closest('.nav-tab');
+            }
 
-    // Marcar el botón activo
-    if (resolvedEvent && resolvedEvent.target) {
-        const navTab = resolvedEvent.target.closest('.nav-tab');
-        if (navTab) navTab.classList.add('active');
-    } else {
-        // Fallback: buscar botón por su onclick (no depende de data-tab)
-        const navTab = Array.from(document.querySelectorAll('.nav-tab'))
-            .find(btn => (btn.getAttribute('onclick') || '').includes(`switchTab('${tabName}'`));
-        if (navTab) navTab.classList.add('active');
-    }
-}
+            if (!navTab) {
+                navTab = Array.from(document.querySelectorAll('.nav-tab'))
+                    .find(btn => (btn.getAttribute('onclick') || '').includes(`switchTab('${tabName}'`));
+            }
+
+            if (navTab) navTab.classList.add('active');
+
+            // Al entrar a Reportes, cargar el combo de capacitaciones
+            if (tabName === 'reports' && typeof loadReportOptions === 'function') {
+                loadReportOptions();
+            }
         }
 
         // ==================== FUNCIONES DE PREGUNTAS ====================
@@ -4141,19 +4141,14 @@ async function saveQuestionsToAirtable(questions, trainingRecordId, type) {
             document.getElementById('totalTrainings').textContent = allTrainings.length;
         }
         
-        // Cargar capacitaciones y reportes cuando se cambia de pestaña
-const originalSwitchTab = switchTab;
-window.switchTab = function(tabName, event = null) {
-    originalSwitchTab(tabName, event);
-
-    if (tabName === 'manage') {
-        loadTrainings();
-    }
-
-    if (tabName === 'reports') {
-        loadReportOptions();
-    }
-};
+        // Cargar capacitaciones cuando se cambia a la pestaña "Gestionar"
+        const originalSwitchTab = switchTab;
+        window.switchTab = function(tabName) {
+            originalSwitchTab(tabName);
+            if (tabName === 'manage') {
+                loadTrainings();
+            }
+        };
 
         // ==================== CHARTS ====================
         
