--- a/capacitaciones.html
+++ b/capacitaciones.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistema de Capacitaciones - Hospital Susana López de Valencia</title>
+    <title>Sistema de Capacitaciones y Cronogramas - Hospital Susana López de Valencia E.S.E</title>
     
     <meta name="description" content="Sistema integral de gestión de capacitaciones hospitalarias">
     <meta name="theme-color" content="#667eea">
