--- a/capacitaciones.html
+++ b/capacitaciones.html
@@ -1251,7 +1251,25 @@ overflow: hidden;
         #reportContainer .card:nth-child(2) { animation-delay: 0.1s; }
         #reportContainer .card:nth-child(3) { animation-delay: 0.2s; }
         #reportContainer .card:nth-child(4) { animation-delay: 0.3s; }
-    </style>
+    
+        .heartbeat-heart{
+            display: inline-block;
+            margin-left: 0.45em;
+            font-size: 1em; /* mismo tamaño del texto */
+            line-height: 1;
+            transform-origin: center;
+            animation: heartBeat 1.05s ease-in-out infinite;
+            filter: drop-shadow(0 2px 6px rgba(22, 163, 74, 0.28));
+        }
+
+        @keyframes heartBeat{
+            0%, 100% { transform: scale(1); }
+            25% { transform: scale(1.15); }
+            40% { transform: scale(0.98); }
+            60% { transform: scale(1.22); }
+            75% { transform: scale(1.02); }
+        }
+</style>
 </head>
 <body>
     <!-- Loading Screen -->
@@ -1261,7 +1279,7 @@ overflow: hidden;
             <div class="progress-track" aria-label="Cargando">
                 <div class="progress-fill"></div>
             </div>
-<p class="loader-title">Iniciando Sistema inteligente de Capacitacion HSLV</p>
+<p class="loader-title">Iniciando Sistema Inteligente de Capacitaciones HSLV <span class="heartbeat-heart" aria-hidden="true">💚</span></p>
             <p class="loader-credit">Desarrollado por Ing. Paul Eduardo Muñoz Rodriguez</p>
         </div>
     </div>
