--- a/capacitaciones.html
+++ b/capacitaciones.html
@@ -913,13 +913,15 @@ overflow: hidden;
         }
 
         .training-status.active {
-            background: #e8f5e9;
-            color: #F2FFFA;
+            background: linear-gradient(135deg, #1b5e20 0%, #2e7d32 100%);
+            color: #ffffff;
+            font-weight: 600;
         }
 
         .training-status.inactive {
-            background: #ffebee;
-            color: #F2FFFA;
+            background: linear-gradient(135deg, #b71c1c 0%, #d32f2f 100%);
+            color: #ffffff;
+            font-weight: 600;
         }
 
         .training-info {
@@ -1873,17 +1875,17 @@ overflow: hidden;
                     <div class="card" style="margin-bottom: 1.5rem;">
                         <h3><i class="fas fa-star"></i> Promedios de Calificaciones</h3>
                         <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1.5rem; margin-top: 1rem;">
-                            <div style="text-align: center; padding: 1rem; background: #e3f2fd; border-radius: 8px;">
-                                <p style="margin: 0; color: #F2FFFA; font-size: 0.9rem;">Promedio Pretest</p>
-                                <p style="margin: 0.5rem 0 0 0; font-size: 2rem; font-weight: bold; color: #F2FFFA;" id="reportAvgPretest">0%</p>
+                            <div style="text-align: center; padding: 1rem; background: linear-gradient(135deg, #1565c0 0%, #1a3a8a 100%); border-radius: 8px;">
+                                <p style="margin: 0; color: #ffffff; font-size: 0.9rem; font-weight: 600;">Promedio Pretest</p>
+                                <p style="margin: 0.5rem 0 0 0; font-size: 2rem; font-weight: bold; color: #ffffff;" id="reportAvgPretest">0%</p>
                             </div>
-                            <div style="text-align: center; padding: 1rem; background: #e8f5e9; border-radius: 8px;">
-                                <p style="margin: 0; color: #F2FFFA; font-size: 0.9rem;">Promedio Posttest</p>
-                                <p style="margin: 0.5rem 0 0 0; font-size: 2rem; font-weight: bold; color: #F2FFFA;" id="reportAvgPostest">0%</p>
+                            <div style="text-align: center; padding: 1rem; background: linear-gradient(135deg, #1b5e20 0%, #2e7d32 100%); border-radius: 8px;">
+                                <p style="margin: 0; color: #ffffff; font-size: 0.9rem; font-weight: 600;">Promedio Posttest</p>
+                                <p style="margin: 0.5rem 0 0 0; font-size: 2rem; font-weight: bold; color: #ffffff;" id="reportAvgPostest">0%</p>
                             </div>
-                            <div style="text-align: center; padding: 1rem; background: #fff3e0; border-radius: 8px;">
-                                <p style="margin: 0; color: #F2FFFA; font-size: 0.9rem;">Mejora Promedio</p>
-                                <p style="margin: 0.5rem 0 0 0; font-size: 2rem; font-weight: bold; color: #F2FFFA;" id="reportAvgImprovementBig">+0%</p>
+                            <div style="text-align: center; padding: 1rem; background: linear-gradient(135deg, #e65100 0%, #bf360c 100%); border-radius: 8px;">
+                                <p style="margin: 0; color: #ffffff; font-size: 0.9rem; font-weight: 600;">Mejora Promedio</p>
+                                <p style="margin: 0.5rem 0 0 0; font-size: 2rem; font-weight: bold; color: #ffffff;" id="reportAvgImprovementBig">+0%</p>
                             </div>
                         </div>
                     </div>
