--- a/capacitaciones.html
+++ b/capacitaciones.html
@@ -1189,31 +1189,32 @@ overflow: hidden;
             font-size: 0.9rem;
             min-width: 50px;
             text-align: center;
+            color: #ffffff;
         }
 
         .score-badge.excellent {
-            background: #e8f5e9;
-            color: #F2FFFA;
+            background: linear-gradient(135deg, #1b5e20 0%, #2e7d32 100%);
+            color: #ffffff;
         }
 
         .score-badge.good {
-            background: #e3f2fd;
-            color: #F2FFFA;
+            background: linear-gradient(135deg, #1565c0 0%, #1a3a8a 100%);
+            color: #ffffff;
         }
 
         .score-badge.average {
-            background: #fff3e0;
-            color: #F2FFFA;
+            background: linear-gradient(135deg, #e65100 0%, #bf360c 100%);
+            color: #ffffff;
         }
 
         .score-badge.low {
-            background: #ffebee;
-            color: #F2FFFA;
+            background: linear-gradient(135deg, #b71c1c 0%, #d32f2f 100%);
+            color: #ffffff;
         }
 
         .score-badge.pending {
-            background: #f5f5f5;
-            color: #F2FFFA;
+            background: linear-gradient(135deg, #424242 0%, #616161 100%);
+            color: #ffffff;
         }
 
         .improvement-badge {
@@ -1222,21 +1223,22 @@ overflow: hidden;
             border-radius: 20px;
             font-weight: bold;
             font-size: 0.85rem;
+            color: #ffffff;
         }
 
         .improvement-badge.positive {
-            background: #e8f5e9;
-            color: #F2FFFA;
+            background: linear-gradient(135deg, #1b5e20 0%, #2e7d32 100%);
+            color: #ffffff;
         }
 
         .improvement-badge.negative {
-            background: #ffebee;
-            color: #F2FFFA;
+            background: linear-gradient(135deg, #b71c1c 0%, #d32f2f 100%);
+            color: #ffffff;
         }
 
         .improvement-badge.neutral {
-            background: #f5f5f5;
-            color: #F2FFFA;
+            background: linear-gradient(135deg, #424242 0%, #616161 100%);
+            color: #ffffff;
         }
 
         .status-badge {
@@ -1245,21 +1247,22 @@ overflow: hidden;
             border-radius: 20px;
             font-size: 0.8rem;
             font-weight: 500;
+            color: #ffffff;
         }
 
         .status-badge.completed {
-            background: #e8f5e9;
-            color: #F2FFFA;
+            background: linear-gradient(135deg, #1b5e20 0%, #2e7d32 100%);
+            color: #ffffff;
         }
 
         .status-badge.pretest-done {
-            background: #fff3e0;
-            color: #F2FFFA;
+            background: linear-gradient(135deg, #e65100 0%, #bf360c 100%);
+            color: #ffffff;
         }
 
         .status-badge.pending {
-            background: #f5f5f5;
-            color: #F2FFFA;
+            background: linear-gradient(135deg, #424242 0%, #616161 100%);
+            color: #ffffff;
         }
 
         /* Estilos para impresión */
